<resources>
    <string name="app_name">Weedstore</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="login">Login</string>
    <string name="create_account">¿No tienes cuenta? Crea una</string>
    <string name="authentication_dialog">Autenticando...</string>
    <string name="login_error_message">Login error</string>
    <string name="email_invalid">Ingresa un correo válido</string>
    <string name="password_invalid">Entre 4 y 10 caracteres alfanuméricos</string>
    <string name="name">Nombre</string>
    <string name="create_account_btn">Crear cuenta</string>
    <string name="login_member">¿Ya eres miembro? Logeate</string>
    <string name="creating_account">Creando cuenta...</string>
    <string name="name_invalid">Al menos 3 caracteres</string>
    <string name="title_activity_home">WeedStore</string>
    <string name="title_customers">Clientes</string>
    <string name="title_products">Productos</string>
    <string name="title_routes">Rutas</string>
    <string name="customer_details">Detalles del cliente</string>
    <string name="customer_name">Nombre</string>
    <string name="customer_email">Correo</string>
    <string name="customer_phone">Teléfono</string>
    <string name="save">Guardar</string>
    <string name="title_activity_maps">WeedStore Mapa</string>
    <string name="orders">Ordenes</string>
</resources>
