<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_profile"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".CustomerActivity">

<ScrollView
    android:id="@+id/scrolView_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/linear_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="50dp"
            android:background="@color/primary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/customer_details"
                    android:textColor="@color/primary_darker"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_name"
                    android:textColor="@color/primary"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/customer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cargando nombre..."
                    android:textColor="@color/primary_darker"
                    android:textSize="18sp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_email"
                    android:textColor="@color/primary"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/customer_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cargando correo..."
                    android:textColor="@color/primary_darker"
                    android:textSize="18sp"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_phone"
                    android:textColor="@color/primary"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/customer_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cargando teléfono..."
                    android:textColor="@color/primary_darker"
                    android:textSize="18sp"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Posición"
                    android:textColor="@color/primary"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/customer_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cargando posición..."
                    android:textColor="@color/primary_darker"
                    android:textSize="18sp"
                    android:layout_marginBottom="10dp" />


            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_account_profile"
                android:layout_marginTop="25dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/customer_profile"
                app:civ_border_color="@color/accent2"
                app:civ_border_width="2dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_cu_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imageview_account_profile"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="-10dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_edit_black_24dp"
                android:tint="@color/primary"
                app:fabSize="mini" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_send_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:src="@drawable/ic_mail_outline_black_24dp"
                android:tint="@color/accent2"
                app:backgroundTint="@color/primary_dark"
                app:elevation="0dp"
                app:fabSize="normal" />

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>

</RelativeLayout>